# deadcat-node

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml
crates/deadcat-cli/: Cargo.toml
crates/deadcat-cli/src/: main.rs
crates/deadcat-client/: Cargo.toml
crates/deadcat-client/src/: keys.rs  lib.rs  maker_builder.rs  market_builder.rs  simplicity.rs  validation.rs
crates/deadcat-client/tests/: market_regtest.rs  simplicity_budget.rs
crates/deadcat-client/tests/support/: process.rs
crates/deadcat-contracts/: Cargo.toml  Simplex.toml  build.rs
crates/deadcat-contracts/simplicityhl/: binary_market.simf  maker_order.simf
crates/deadcat-contracts/src/: binary_market.rs  interpret.rs  lib.rs  maker_order.rs  market_crypto.rs  recovery.rs  rt.rs
crates/deadcat-contracts/src/binary_market/: compiled.rs
crates/deadcat-contracts/src/interpret/: binary_market.rs  maker_order.rs
crates/deadcat-contracts/src/maker_order/: compiled.rs
crates/deadcat-contracts/tests/: covenant_execution.rs  golden_vectors.rs  interpret.rs
crates/deadcat-contracts/tests/support/: mod.rs
crates/deadcat-iroh/: Cargo.toml
crates/deadcat-iroh/src/: client.rs  handler.rs  lib.rs  server.rs  wire.rs
crates/deadcat-iroh/tests/: round_trip.rs
crates/deadcat-node/: Cargo.toml
crates/deadcat-node/src/: activation.rs  chain.rs  discovery.rs  interpreter.rs  lib.rs  main.rs  registration.rs  rpc_handler.rs  store.rs  sync.rs
crates/deadcat-node/src/chain/: elements_rpc.rs  esplora.rs  http.rs  tests.rs
crates/deadcat-node/src/interpreter/: tests.rs
crates/deadcat-node/src/store/: assurance_tests.rs
crates/deadcat-node/tests/: market_persistence_reorg.rs  market_sync_recovery.rs  rpc_handler.rs
crates/deadcat-rpc/: Cargo.toml
crates/deadcat-rpc/src/: lib.rs
crates/deadcat-rt-study/: Cargo.toml  Simplex.toml  build.rs
crates/deadcat-rt-study/simplicityhl/: rt_ab.simf  rt_rolling.simf
crates/deadcat-rt-study/src/: lib.rs  regtest.rs  schedule.rs  tests.rs
crates/deadcat-types/: Cargo.toml
crates/deadcat-types/src/: lib.rs
docs/: architecture.md  implementation-plan.md  protocol-v1.md  storage-sync-rpc.md
docs/acceptance/: backend-equivalence-v1.md  binary-market-ab-v1.md  maker-orders-v1.md  multi-contract-v1.md  process-boundary-v1.md
docs/adr/: 0001-authority-and-shared-node.md  0002-v1-contract-scope.md  0003-order-economics.md  0004-chain-state-and-reorgs.md  0005-rt-blinding-schedule.md  README.md
docs/measurements/: binary-market-ab-live-2026-07-13.json  binary-market-ab-v1.json  rt-blinding-v1.json
fixtures/wire-v1/: get-info-request.json  list-recovery-hints-request.json  list-recovery-hints-response.json  register-contract-package-receipt.json  register-contract-package-request.json
scripts/: check-smplx-pin.sh
