[package]
name = "deadcat-cli"
description = "Operator and end-user CLI for deadcat-node."
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "deadcat"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
deadcat-iroh.workspace = true
deadcat-rpc.workspace = true
deadcat-types.workspace = true
elements.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
