[package]
name = "deadcat-client"
description = "Client-side Deadcat evidence verification, recovery, routing, and transaction construction."
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bip39.workspace = true
deadcat-contracts.workspace = true
deadcat-rpc.workspace = true
deadcat-types.workspace = true
elements.workspace = true
hmac.workspace = true
rand.workspace = true
sha2.workspace = true
smplx-std.workspace = true
thiserror.workspace = true

[dev-dependencies]
bitcoincore-rpc = "0.19"
deadcat-iroh = { path = "../deadcat-iroh" }
deadcat-node = { path = "../deadcat-node" }
serde.workspace = true
serde_json.workspace = true
smplx-regtest.workspace = true
tempfile.workspace = true
tokio.workspace = true
