[package]
name = "deadcat-node"
description = "Keyless Deadcat chain index and evidence server."
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
deadcat-contracts.workspace = true
deadcat-iroh.workspace = true
deadcat-rpc.workspace = true
deadcat-types.workspace = true
elements.workspace = true
hex.workspace = true
postcard.workspace = true
rand.workspace = true
redb.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "test-util"] }
