[package]
name = "deadcat-rpc"
description = "Versioned transport-independent wire schema for deadcat-node."
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
deadcat-types.workspace = true
elements.workspace = true
hex.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
