[package]
name = "deadcat-types"
description = "Internal canonical domain types for deadcat-node."
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
elements.workspace = true
hex.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
